# dora-implementation

./: .gitattributes  .gitignore  LICENSE  README.md  comprehensive_test.py  demo.py  pyproject.toml  requirements.txt  setup.py  vit_grasp_detection_spec.md
code/: CONTRIBUTING.md  Makefile  pyproject.toml  run_experiments.py  run_rank_analysis.py
code/benchmarks/: __init__.py  dora_vs_lora.py
code/configs/glue/: mrpc_roberta_dora_r8.yaml  mrpc_roberta_large_dora_r8.yaml  mrpc_roberta_large_lora_r8.yaml  mrpc_roberta_lora_r8.yaml  rte_roberta_dora_r8.yaml  rte_roberta_large_dora_r8.yaml  rte_roberta_large_lora_r8.yaml  rte_roberta_lora_r8.yaml  sst2_1b_dora_r8.yaml  sst2_3b_dora_r8.yaml  sst2_roberta_dora_r8.yaml  sst2_roberta_large_dora_r8.yaml  sst2_roberta_large_lora_r8.yaml  sst2_roberta_lora_r8.yaml
code/configs/grasp/: siglip_dora_r8.yaml  siglip_lora_r8.yaml  vit_dora_r8.yaml  vit_lora_r8.yaml
code/configs/models/: llama_1b.yaml  llama_3b.yaml
code/configs/vla/: pusht_dora_r8.yaml  pusht_lora_r8.yaml
code/demo/: gradio_app.py
code/dora/: __init__.py
code/dora/data/: __init__.py  cornell_grasp.py  lerobot_dataset.py
code/dora/layers/: __init__.py  (+3 more)
code/notebooks/: README.md
code/scripts/: download_cornell_grasp.py  export_glue_metrics.py  export_glue_samples.py  export_grasp_samples.py  export_rank_analysis.py  export_speech_commands_samples.py  export_vla_samples.py  openvla_demo.py  run_benchmarks.py  run_grasp_experiments.sh  run_rank_sweep.py  run_roberta_experiments.sh  run_roberta_large_experiments.ps1  run_vla_experiments.ps1  run_vla_experiments.sh  train_glue.py  train_grasp.py  train_speech_commands.py  train_vla.py
code/training/: trainer.py
(+226 files in other folders)
