[project]
name = "cs4782-dora-project"
version = "0.1.0"
description = "CS4782 final project repository for DoRA reproduction, experiments, demo, and slides."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "torch>=2.0.0",
  "torchvision>=0.15.0",
  "transformers>=4.30.0",
  "datasets>=2.12.0",
  "accelerate>=0.20.0",
  "numpy>=1.21.0",
  "scipy>=1.7.0",
  "matplotlib>=3.5.0",
  "seaborn>=0.11.0",
  "tqdm>=4.64.0",
  "omegaconf>=2.3.0",
  "hydra-core>=1.3.0",
  "scikit-learn>=1.1.0",
  "pandas>=1.4.0",
  "tensorboard>=2.10.0",
  "gradio>=4.44.0",
  "wandb>=0.26.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "black>=24.0.0",
  "ruff>=0.6.0",
]
notebooks = [
  "jupyter>=1.0.0",
  "ipykernel>=6.29.0",
]
tracking = [
  "wandb>=0.15.0",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "W"]
ignore = ["E203"]

[tool.pytest.ini_options]
testpaths = ["tests", "demo/tests"]
pythonpath = ["."]
addopts = "-q"

[tool.uv]
package = false

# Use CUDA 12.8 wheels on Linux/Windows (RTX 5070 / Blackwell requires cu128+)
# Mac stays on the default PyPI wheel which includes MPS support
[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.indexes]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
